<fix>: link css

--- a/Template/add_friend.html
+++ b/Template/add_friend.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <title>Add friend</title>
-        <link rel="stylesheet" href="../Style/product.css">
-        <link rel="stylesheet" href="{{ url_for('Style', path='product.css')
+        <link rel="stylesheet" href="../Style/add_friend.css">
+        <link rel="stylesheet" href="{{ url_for('Style', path='add_friend.css')
             }}">
         <link rel="icon" type="image/png" href="../Icon/favicon.png">
     </head>
