--- a/Template/pending_friend.html
+++ b/Template/pending_friend.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Add friend</title>
-        <link rel="stylesheet" href="../Style/product.css">
-        <link rel="stylesheet" href="{{ url_for('Style', path='product.css')
+        <title>Pending friend</title>
+        <link rel="stylesheet" href="../Style/pending_friend.css">
+        <link rel="stylesheet" href="{{ url_for('Style', path='pending_friend.css')
             }}">
         <link rel="icon" type="image/png" href="../Icon/favicon.png">
     </head>
