--- a/Style/style.css
+++ b/Style/style.css
@@ -1,8 +1,9 @@
-
 body {
-    background-color: #171a21;
+    font-family: 'Noto Sans Thai', sans-serif;
+    margin: 0;
+    padding: 0;
     color: #fff;
-    font-family: Arial, sans-serif;
+    background-color: #1B2838;
 }
 
 .container {
@@ -41,50 +42,24 @@ body {
     margin-left: 10px;
 }
 
-.featured {
+.recommend {
     margin-top: 20px;
-    background-size: cover;
     background-position: center;
+    width: 100%;
     height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.featured h2 {
-    font-size: 48px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 20px;
-    text-shadow: 2px 2px 0 #000;
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    grid-template-rows: 1fr;
+    background-color:#0E141B;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .special-offers {
-    --background-color: aquamarine;
     display: grid;  
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
     margin-top: 20px;
-}
-
-.special-offer {
-    background-color: #23262d;
-    border-radius: 4px;
-    padding: 10px;
-    text-align: center;
-}
-
-.special-offer img {
-    max-width: 100%;
-    border-radius: 4px;
-}
-
-.special-offer h3 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-top: 10px;
-    margin-bottom: 5px;
 }
 
 .find-by-tags {
@@ -133,12 +108,37 @@ body {
     background-position: center;
 }
 
-.quick-search:hover{
-
-}
-
 .quick-search img{
     width: 100%;
     height: 100%;
 }
 
+/* ========================= For spotlight ========================= */
+/* ========================= For spotlight ========================= */
+/* ========================= For spotlight ========================= */
+/* ========================= For spotlight ========================= */
+/* ========================= For spotlight ========================= */
+
+.spotlight {
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 10px 6px 20px -14px rgba(0,0,0,0.71);
+}
+
+
+.spotlight .image {
+    width: 100%;
+    height: 150px;
+}
+
+.spotlight .image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* ========================= End spotlight ========================= */
+/* ========================= End spotlight ========================= */
+/* ========================= End spotlight ========================= */
+/* ========================= End spotlight ========================= */
+/* ========================= End spotlight ========================= */
