--- a/HTML/Templates/simple_block.html
+++ b/HTML/Templates/simple_block.html
@@ -1,3 +1,17 @@
+<style>
+
+img {
+    max-width: 100%;
+    height: auto; 
+}
+
+.horizon_spotlight {
+    width: 300px;
+    padding: 5px;
+}
+
+</style>
+
 <div class="horizon_spotlight spotlight">
     <div class="image">
         <img src={{ product["cover_image"] }}>
