--- a/Style/library.css
+++ b/Style/library.css
@@ -2,14 +2,13 @@ body {
     background-color: #171a21;
     color: #fff;
     font-family: Arial, sans-serif;
-
 }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 25%;
+    width: 10%;
     background-color: #292838;
     position: fixed;
     height: 100%;
@@ -21,16 +20,16 @@ li a{
     padding: 8px 16px;
 }
 
-.box1,.box2 span {
+span {
     padding: 5px 10px;
     height: auto;
 }
 
 .container {
-    max-width: 900px;
+    max-width: 1800px;
     padding: 10px;
-    margin-left:25%;
-    height:1000px;
+    margin-left:10%;
+    height:800px;
     --background-color:antiquewhite;
 }
 
@@ -41,6 +40,8 @@ li a{
 }
 
 .box2{
+    display: flex;
+	flex-wrap: wrap;
     height: fit-content;
 }
 
