--- a/HTML/Templates/navbar.html
+++ b/HTML/Templates/navbar.html
@@ -8,9 +8,13 @@
     </a>
     <div class="navigate">
         <a href="/">Store</a>
-        <a href="/library/{{ user.get_id() }}">Library</a>
         <a href="/community/all">Community</a>
         {% if user %}
+            {% if is_publisher %}
+                <a style = "text-align: center;" href="/publisher">Shop</a>
+            {% else %}
+                <a href="/library/{{ user.get_id() }}">Library</a>
+            {% endif %}
             <a href="/cart/{{ user.get_id() }}">Viewcart</a>
             <a href="/profile/{{ user.get_id() }}">Profile</a>
         {% endif %}
