--- a/Style/view_own_product.css
+++ b/Style/view_own_product.css
@@ -21,12 +21,22 @@ body {
     text-decoration: none;
 }
 
-.add_product {
-    color: #000;
-    width: 100px;
-    height: 30px;
-    background-color: white;
+.btn {
+    color: whitesmoke;
+    width: 130px;
+    height: 20px;
     outline: 1px solid #000;
     text-align: center;
+    margin: auto;
+    padding: 1px;
+}
+.add_product{
+    background-color: #04AA6D;
+}
+.modifly_product{
+    background-color: rgba(255, 233, 93, 0.452);
+}
+.delete_product{
+    background-color: rgb(226, 112, 112);
 }
 
