--- a/Style/pending_friend.css
+++ b/Style/pending_friend.css
@@ -1,13 +1,28 @@
 body {
-    background-color: #171a21;
+    font-family: 'Noto Sans Thai', sans-serif;
+    margin: 0;
+    padding: 0;
     color: #fff;
-    font-family: Arial, sans-serif;
-
+    background-color: #1B2838;
 }
 
+.display-profile img{
+    width: auto;
+    height: auto;
+}
+
+.ignore-all {
+    padding: 1px;
+    color: #000000;
+    background-color: #df3535;
+}
 .container {
     max-width: 900px;
-    margin: 0 auto;
+    margin: 0px auto;
     padding: 20px;
     --background-color:antiquewhite;
+}
+
+.container *{
+    margin-top: 10px;
 }
