<fix>: library route don't need user_id anymore

--- a/HTML/Templates/navbar.html
+++ b/HTML/Templates/navbar.html
@@ -13,7 +13,7 @@
             {% if is_publisher %}
                 <a style = "text-align: center;" href="/publisher">Shop</a>
             {% else %}
-                <a href="/library/{{ user.get_id() }}">Library</a>
+                <a href="/library">Library</a>
             {% endif %}
             <a href="/cart/{{ user.get_id() }}">Viewcart</a>
             <a href="/profile/{{ user.get_id() }}">Profile</a>
