--- a/HTML/Templates/simple_block.html
+++ b/HTML/Templates/simple_block.html
@@ -1,22 +1,17 @@
 <style>
-
-img {
+  img {
     max-width: 100%;
-    height: auto; 
-}
+    height: auto;
+  }
 
-.horizon_spotlight {
+  .horizon_spotlight {
     width: 300px;
     padding: 5px;
-}
-
+  }
 </style>
-
-<div class="horizon_spotlight spotlight">
-    <div class="image">
-        <img src={{ product["cover_image"] }}>
-    </div>
-    <div class="prod_name">
-        {{ product["name"] }}
-    </div>
-</div>
+<a href="/product/{{ product["id"] }}">
+  <div class="horizon_spotlight spotlight">
+    <div class="image"><img src={{ product["cover_image"] }}></div>
+    <div class="prod_name">{{ product["name"] }}</div>
+  </div>
+</a>
