--- a/HTML/Templates/friend_block.html
+++ b/HTML/Templates/friend_block.html
@@ -2,27 +2,29 @@
   <link rel="stylesheet" href="../../Style/friend_block_style.css" />
 </head>
 {% if user %}
-  <a class="friend_block" href="/profile/{{ found[0].get_id() }}">
-    <div class="profile">
-      <img src="{{ found[0].get_profile() }}" />
-    </div>
-    <div class="name">{{ found[0].get_name() }}
-        {% if found[1] == True %}
-        <a class="add_friend" href="/send_invite/{{ user.get_id() }}/{{ found[0].get_id() }}">add friend</a>
-        {% endif %}
-    </div>
-    <div class="level_container">
-      <div class="level">{{ found[0].get_level() }}</div>
-    </div>
-  </a>
-{% else %}
-  <a class="friend_block" href="/profile/{{ found.get_id() }}">
-    <div class="profile">
-        <img src="{{ found.get_profile() }}">
-    </div>
-    <div class="name">{{ found.get_name() }}</div>
-    <div class="level_container">
-        <div class="level">{{ found.get_level() }}</div>
-    </div>
-  </a>
+<a class="friend_block" href="/profile/{{ found[0].get_id() }}">
+  <div class="profile">
+    <img src="{{ found[0].get_profile() }}" />
+  </div>
+  <div class="name">{{ found[0].get_name() }}</div>
+  <div class="level_container">
+    <div class="level">{{ found[0].get_level() }}</div>
+  </div>
+</a>
+{% if found[1] == True %}
+<a
+  class="add_friend"
+  href="/send_invite/{{ user.get_id() }}/{{ found[0].get_id() }}"
+  >add friend</a
+>
+{% endif %} {% else %}
+<a class="friend_block" href="/profile/{{ found.get_id() }}">
+  <div class="profile">
+    <img src="{{ found.get_profile() }}" />
+  </div>
+  <div class="name">{{ found.get_name() }}</div>
+  <div class="level_container">
+    <div class="level">{{ found.get_level() }}</div>
+  </div>
+</a>
 {% endif %}
