--- a/Style/cart.css
+++ b/Style/cart.css
@@ -98,3 +98,7 @@ body {
     background-color: rgb(55, 150, 0);
   
   }
+
+  a, a:hover, a:focus, a:active { 
+    color: inherit; text-decoration: none;
+}
