<feat>: update user to current_user

--- a/HTML/Templates/community_bar.html
+++ b/HTML/Templates/community_bar.html
@@ -37,7 +37,7 @@
     <a class="type type2" href="/community/artwork">artwork</a>
     <a class="type type3" href="/community/news">news</a>
     <a class="type type4" href="/community/manual">manual</a>
-    {% if user %}
+    {% if current_user %}
         <a class="add_post" href="/add_post">Add Post</a>
     {% else %}
         <a class="add_post" href="/login">Add Post</a>
