<feat>: add current user to shop route

--- a/HTML/Templates/navbar.html
+++ b/HTML/Templates/navbar.html
@@ -11,7 +11,7 @@
         <a href="/community/all">Community</a>
         {% if logged_in %}
             {% if is_publisher %}
-                <a style = "text-align: center;" href="/publisher">Shop</a>
+                <a style = "text-align: center;" href="/shop">Shop</a>
             {% else %}
                 <a href="/library">Library</a>
             {% endif %}
