--- a/Style/pending_friend.css
+++ b/Style/pending_friend.css
@@ -30,3 +30,7 @@ body {
 a, a:hover, a:focus, a:active { 
     color: inherit; text-decoration: none;
 }
+
+.box{
+    background-color: #2b3e55;
+}
