<feat>: add view recently add product

--- a/HTML/Templates/vertical-spotlight.html
+++ b/HTML/Templates/vertical-spotlight.html
@@ -58,8 +58,14 @@
     </div>
     <div class="footer">
         <div class="footer_text">
-            <div class="footer_content discount">-{{ product.get_discount() * 100 }}%</div>
-            <div class="footer_content price">{{ product.get_discounted_price() }} THB</div>
+            {% if product.get_discount() != 0 %}
+                <div class="footer_content discount">-{{ product.get_discount() * 100 }}%</div>
+            {% endif %}
+            {% if product.get_price() != 0 %}
+                <div class="footer_content price">{{ product.get_discounted_price() }} THB</div>
+            {% else %}
+                <div class="footer_content price">Free</div>
+            {% endif %}
         </div>
     </div>
     <div class="description">
