--- a/Style/library.css
+++ b/Style/library.css
@@ -9,7 +9,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 25%;
+    width: 24%;
     background-color: #292838;
     position: fixed;
     height: 100%;
@@ -18,10 +18,16 @@ ul {
 
 li a{
     display: block;
-    padding: 8px 16px;
+    padding: 4px 8px;
 }
 
-a, a:hover, a:focus, a:active { color: inherit; text-decoration: none;}
+li {
+    background-color: #4a5b83;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+a, a:focus, a:active { color: inherit; text-decoration: none;}
 
 .box1,.box2 span {
     padding: 5px 10px;
