--- a/HTML/Templates/navbar.html
+++ b/HTML/Templates/navbar.html
@@ -17,13 +17,16 @@
             {% endif %}
             <a href="/cart/{{ current_user.get_id() }}">Viewcart</a>
             <a href="/profile/{{ current_user.get_id() }}">Profile</a>
+            {% set invite_count = current_user.get_invite_list()|length %}
             {% if current_user.get_invite_list() != [] %}
                 <a class="invite_notification" href="/pending_friend/{{ current_user.get_id() }}">
                     <img src="../../Icon/letter.png">
+                    {{ invite_count }}
                 </a>
             {% else %}
                 <a class="no_invite_notification" href="/pending_friend/{{ current_user.get_id() }}">
                     <img src="../../Icon/letter.png">
+                    {{ invite_count }}
                 </a>
             {% endif %}
         {% endif %}
