--- a/Style/product.css
+++ b/Style/product.css
@@ -84,13 +84,22 @@ body {
   box-shadow: 10px 8px 18px -9px rgba(0,0,0,0.66);
   display: grid;
   grid-template-columns: 70% 30%;
-  grid-template-rows: 100%;
+  grid-template-rows: 50% 50%;
   margin-top: 35px;
 }
 
 .buytab h3{
   margin: 20px;
 
+}
+
+.to_wishlist:hover {
+  background-color:#303f50;
+}
+
+a, a:active, a:focus{
+  text-decoration: none;
+  color: inherit;
 }
 
 .addtocart {
@@ -106,11 +115,18 @@ body {
 }
 
 .addbtn {
-  width: 200%;
+  width: 50%;
   height: 100%;
   color: #fff;
   text-shadow: #23262d 1px;
   border: none;
+}
+
+
+.to_wishlist {
+  width: 50%;
+  background-color:#1b2838;
+  padding: 10px 20px;
 }
 
 .green_addbtn{
