--- a/HTML/Templates/navbar.html
+++ b/HTML/Templates/navbar.html
@@ -16,6 +16,7 @@
                 <a href="/library">Library</a>
             {% endif %}
             <a href="/cart/{{ current_user.get_id() }}">Viewcart</a>
+            <a href="/view_wish_list">Wishlist</a>
             <a href="/profile/{{ current_user.get_id() }}">Profile</a>
             {% set invite_count = current_user.get_invite_list()|length %}
             {% if current_user.get_invite_list() != [] %}
