--- a/Style/product.css
+++ b/Style/product.css
@@ -84,7 +84,7 @@ body {
   box-shadow: 10px 8px 18px -9px rgba(0,0,0,0.66);
   display: grid;
   grid-template-columns: 70% 30%;
-  grid-template-rows: 50% 50%;
+  grid-template-rows: 100%;
   margin-top: 35px;
 }
 
@@ -93,40 +93,36 @@ body {
 
 }
 
-.to_wishlist:hover {
-  background-color:#303f50;
+.buytab .right_col {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
 }
+
 
 a, a:active, a:focus{
   text-decoration: none;
   color: inherit;
 }
 
-.addtocart {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  background-color: #23262d;
-  text-align: center;
-}
-
-.prod {
-  align-self: center;
-}
-
 .addbtn {
-  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: 100%;
   color: #fff;
   text-shadow: #23262d 1px;
-  border: none;
+  border: none;background: rgb(106,106,106);
+  background: linear-gradient(90deg, rgba(106,106,106,0.08167016806722693) 0%, rgba(83,83,83,0.14329481792717091) 100%);}
+
+.to_wishlist:hover {
+  background-color:#303f50;
 }
 
-
-.to_wishlist {
-  width: 50%;
+.add_wishlist {
+  width: 100%;
   background-color:#1b2838;
-  padding: 10px 20px;
 }
 
 .green_addbtn{
@@ -142,6 +138,15 @@ a, a:active, a:focus{
 .green_addbtn:hover {
   background-color: rgb(55, 150, 0);
 
+}
+
+.pricing {
+  background-color:#1b2838;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sysreq {
