--- a/Style/library.css
+++ b/Style/library.css
@@ -27,7 +27,14 @@ li {
     margin-top: 5px;
 }
 
-a, a:focus, a:active { color: inherit; text-decoration: none;}
+li:hover {
+    background-color: #324164;
+}
+
+a, a:focus, a:active { 
+    color: inherit; 
+    text-decoration: none;
+}
 
 .box1,.box2 span {
     padding: 5px 10px;
@@ -45,4 +52,10 @@ a, a:focus, a:active { color: inherit; text-decoration: none;}
     display: flex;
     height: 20%;
     background-color: #354875;
+}
+
+.box2 a{
+    background-color: #354875;
+    margin: 10px 0;
+    width: auto;
 }
