--- a/HTML/Templates/simple_block.html
+++ b/HTML/Templates/simple_block.html
@@ -1,17 +1,18 @@
 <style>
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+img {
+	max-width: 100%;
+	height: auto;
+}
 
-  .horizon_spotlight {
-    width: 300px;
-    padding: 5px;
-  }
+.horizon_spotlight {
+	width: 300px;
+	padding: 5px;
+}
+
 </style>
 <a href="/product/{{ product["id"] }}">
-  <div class="horizon_spotlight spotlight">
-    <div class="image"><img src={{ product["cover_image"] }}></div>
-    <div class="prod_name">{{ product["name"] }}</div>
-  </div>
+<div class="horizon_spotlight spotlight">
+	<div class="image"><img src="{{ product['cover_image'] }}"></div>
+	<div class="prod_name">{{ product["name"] }}</div>
+</div>
 </a>
