<chore>: change "all" to "general"

--- a/HTML/Templates/community_bar.html
+++ b/HTML/Templates/community_bar.html
@@ -33,7 +33,7 @@
 
 </style>
 <div class="community_bar">
-    <a class="type type1" href="/community/all">all</a>
+    <a class="type type1" href="/community/all">general</a>
     <a class="type type2" href="/community/artwork">artwork</a>
     <a class="type type3" href="/community/news">news</a>
     <a class="type type4" href="/community/manual">manual</a>
